--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper = "0.12.34"
+hyper-rustls = "0.17.1"
+postgres = "0.15.2"
+serde_json = "0.9.10"
+serde = "0.9.14"
+serde_derive = "0.9.14"
+telegram-bot = "0.6.3"
