--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,10 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = "0.12.34"
-hyper-rustls = "0.17.1"
 postgres = "0.15.2"
-serde_json = "0.9.10"
-serde = "0.9.14"
-serde_derive = "0.9.14"
-telegram-bot = "0.6.3"
+url = "2.1.0"
+log = "0.4"
+pretty_env_logger = "0.3"
+env_logger = "0.6.2"
+#tokio = { git = "https://github.com/tokio-rs/tokio" }
+tokio = { version = "=0.2.0-alpha.4" }
+#hyper = { git = "https://github.com/hyperium/hyper" }
+hyper = "0.13.0-alpha.1"
+futures-util-preview = { version = "=0.3.0-alpha.18" }
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+async-trait = "0.1.11"
+failure = "0.1.5"
