--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,3 +21,6 @@ hyper = "0.13.0-alpha.1"
 futures-util-preview = { version = "=0.3.0-alpha.18" }
 async-trait = "0.1.11"
 failure = "0.1.5"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
