--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,20 +7,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-postgres = "0.15"
-tokio-postgres = "0.4.0-rc.3"
-rust-ini = "0.13"
-url = "2.1.0"
-log = "0.4"
-pretty_env_logger = "0.3"
+async-trait = "0.1.11"
+chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.6.2"
-#tokio = { git = "https://github.com/tokio-rs/tokio" }
-tokio = { version = "=0.2.0-alpha.4" }
+failure = "0.1.5"
+futures-util-preview = { version = "=0.3.0-alpha.18" }
 #hyper = { git = "https://github.com/hyperium/hyper" }
 hyper = "0.13.0-alpha.1"
-futures-util-preview = { version = "=0.3.0-alpha.18" }
-async-trait = "0.1.11"
-failure = "0.1.5"
+log = "0.4"
+postgres = "0.15"
+pretty_env_logger = "0.3"
+rust-ini = "0.13"
+#tokio = { git = "https://github.com/tokio-rs/tokio" }
+tokio = { version = "=0.2.0-alpha.4" }
+tokio-postgres = "0.4.0-rc.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+url = "2.1.0"
