feat telegram: two http requests made up

--- a/telegram/Cargo.toml
+++ b/telegram/Cargo.toml
@@ -21,3 +21,4 @@ serde = "0.9.14"
 serde_derive = "0.9.14"
 telegram-bot = {git="https://github.com/telegram-rs/telegram-bot"}
 futures-preview = "=0.3.0-alpha.18"
+reqwest = "0.9.20"
